--- a/My_project/src/index.css
+++ b/My_project/src/index.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     min-height: 100vh;
     overflow-x: hidden;
-    background-image: url("./image/7.png");
+    /* background-image: url("./image/7.png"); */
     background-repeat: no-repeat;
     background-size: cover; 
 
@@ -15,7 +15,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(66, 41, 41, 0.5); /* Dark transparent layer */
+  /* background-color: rgba(66, 41, 41, 0.5); Dark transparent layer */
   /* For a light transparent layer, use something like: rgba(255, 255, 255, 0.5) */
   }
   
